# catprompt

./: .gitignore  Makefile  README.md  catprompt.ini  catprompt.py  pyproject.toml  setup.py
catprompt/: prompter.py
prompt/: 0-system.txt
prompts/: 1-doc.txt  2-code.txt  3-file-tags.txt  4-init.txt  5-doc.txt
test/: test_example.py  test_prompter.py
test/data/: expected-output-with-inline-content.txt  expected-output-with-stop.txt  expected-output-with-tags-and-equals.txt  expected-output-with-tags-and-minus.txt  expected_output.txt  include-tags.txt  include-with-stop.txt  include.txt  input-with-inline-content.txt  input-with-stop.txt  input-with-tags-and-equals.txt  input-with-tags-and-minus.txt  input.txt  input_with_stop.txt
test/example/: code-snippet.py  expected-output.txt  main-prompt.txt  sub-prompt-1.txt
